# meme_fund

./: .gitignore  Anchor.toml  Readme.md  package.json
.github/workflows/: anchor-ci.yml
programs/meme_fund/: Cargo.toml  build.rs
programs/meme_fund/src/: lib.rs
tests/: meme_fund.ts
utils/: globalAccount.ts  util.ts
