[package]
name = "meme_fund"
version = "0.1.0"
description = "Feed fun memes to the fund"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meme_fund"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
mpl-token-metadata = "3.1.0"
serde_json = "1.0"
spl-associated-token-account = "1.1.3"

[build-dependencies]
serde_json = "1.0"